# ai-call-server

./: .gitignore  GOOGLE_MAP_PARSER.md  README.md  create_tables.py  main.py  pyproject.toml  test_gemini_models.py  test_gemini_shop_parser.py  test_google_map_parser.py  vercel.json
ai_docs/: README.md
ai_docs/changelogs/: api-routes-v1.1.0.md  api-routes-v1.1.1.md  google-map-parser-v1.0.0.md
app/: main.py
app/api/: __init__.py  ai_call.py  order.py  shop.py  user.py
app/core/: auth.py  config.py  error_handler.py
app/crud/: order.py  shop.py  user.py
app/models/: base.py  order.py  shop.py  user.py
app/schemas/: order.py  shop.py  user.py
app/utils/: utils.py
