[tool.poetry]
name = "ai-call-server"
version = "0.1.0"
description = "AI帮用户打电话订餐"
authors = ["Alan Fang <disflyer123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = "^0.115.12"
uvicorn = {extras = ["standard"], version = "^0.34.2"}
sqlalchemy = "^2.0"
pydantic = "^2.11.5"
python-dotenv = "^1.1.0"
pydantic-settings = "^2.2.1"
psycopg2-binary = "^2.9.10"
email-validator = "^2.2.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-multipart = "^0.0.9"

[tool.poetry.dev-dependencies]
# 可选：开发依赖

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
